Fixed bug #46427 (SoapClient() stumbles over its "stream_context" parameter)